feat(configurations): registrations settings
